# lnl_computer

./: .buildinfo  .gitignore  CHANGELOG.md  README.html  README.md  example.html  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  tests.yml
_sources/: README.md  example.ipynb
docs/: _toc.yml  example.ipynb
src/lnl_computer/: data_cache.py  likelihood.py  logger.py  mock_data.py
src/lnl_computer/cli/: cli.py  main.py
src/lnl_computer/cosmic_integration/: batch_mcz_grid_generation.py  mcz_grid.py  star_formation_paramters.py  universe.py
src/lnl_computer/data_generation/: __init__.py  cli.py  detection_matrix_generator.py  likelihood_cacher.py
src/lnl_computer/likelihood/: likelihood_cache.py
src/lnl_computer/liklelihood/: likelihood.py  likelihood_cache.py
src/lnl_computer/observation/: __init__.py  lvk_observation.py  mock_observation.py  observation.py
src/lnl_computer/slurm_utils/templates/: templates.py
src/lnl_computer/utils/: __init__.py  corner.py  gif_generator.py
tests/: conftest.py  test_cli.py  test_data_generation.py  test_datacache.py  test_generate_job_files.py  test_grid_generation.py  test_grid_generation_and_lnl.py  test_lnl.py  test_lvk_event_lnl.py  test_mock_data.py  test_observation_loader.py  test_ogc4_lnl.py  test_star_formation_parameter_sampler.py  test_universe.py
