[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "lnl_computer"
dynamic = ["version"] # scm versioning (using tags)
requires-python = ">=3.8"
description = "COMPAS detection Likelihood computer"
readme = "README.md"
authors = [
    {name = "Avi Vajpeyi", email = "avi.vajpeyi@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "arviz",
    "spectral",
    "scikit-fda",
    "matplotlib",
    "imageio",
    "pygifsicle",
    "bilby",
    "statsmodels",
    "loguru",
    "astropy",
    "compas_python_utils@git+https://github.com/TeamCOMPAS/COMPAS.git"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.1.0",
    "pre-commit",
    "flake8>=5.0.4",
    "black>=22.12.0",
    "jupyter-book",
]

[tool.setuptools_scm]
version_file = "src/lnl_computer/_version.py"


[project.urls]  # Optional
"Homepage" = "https://github.com/avivajpeyi/compas_detection_likelihood_computer"
"Bug Reports" = "https://github.com/avivajpeyi/compas_detection_likelihood_computer/issues"
"Source" = "https://github.com/avivajpeyi/compas_detection_likelihood_computer/"


[tool.setuptools]
package-data = { "lnl_computer" = [
    "templates/*.sh",
] }


[project.scripts]
lnl_computer_slurm_builder = "lnl_computer.slurm_utils.cli:main"


[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.pytest.ini_options]
testpaths = ["tests"]
